blockml/test/errors/01_yaml/e297/e297.udf
udf: e297
sql: |
  CREATE TEMPORARY FUNCTION ... ;




